--- a/pacific/pacific.css
+++ b/pacific/pacific.css
@@ -1,20 +1,85 @@
 body {
-    background-color: #FFFFFF;
+    background-color: #4F6D93;
+    background-image: linear-gradient(to bottom, #FFFFFF, #4F6D93);
+    background-repeat: no-repeat;
     color: #666666;
+    font-family: sans-serif;
+}
+
+#wrapper {
+    margin: auto;
+    width: 80%;
+    background-color: #90C7E3;
+    min-width: 960px;
+    max-width: 2048px;
+    box-shadow: 3px 3px 3px #333333;
 }
 
 h1 {
     background-color: #000033;
     color: #FFFFFF;
     margin-bottom: 0;
+    background-image: url(sunset.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+    height: 60px;
+    text-align: center;
+    padding-top: 10px;
+    margin-top: 0px;
 }
 
 nav {
-    background-color: #90C7E3;
+    font-weight: bold;
+    padding: 20px;
+    float: left;
+    width: 160px;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0px;
+    padding-left: 0px;
+    font-size: 1.2em;
+}
+
+nav a:link {
+    color: #000033;
+}
+
+nav a:visited {
+    color: #344873;
+}
+
+nav a:hover {
+    color: #FFFFFF;
+}
+
+div {
+    margin-left: auto;
+}
+
+main {
+    background-color: #FFFFFF;
+    margin-left: 190px;
+    padding-top: 1px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    display: block;
+}
+
+nav a {
+    text-decoration: none;
 }
 
 h2 {
     color: #3399CC;
+    font-family: serif;
+    text-shadow: 1px 1px 1px #CCCCCC;
+}
+
+h3 {
+    font-family: serif;
 }
 
 dt {
@@ -23,4 +88,43 @@ dt {
 
 .resort {
     color: #5C7FA3;
+    font-weight: bold;
+}
+
+footer {
+    background-color: #FFFFFF;
+    margin-left: 190px;
+    font-size: 75%;
+    font-style: italic;
+    text-align: center;
+    padding: 20px;
+}
+
+.contact {
+    font-size: 90%
+}
+
+main ul {
+    list-style-image: url(marker.gif)
+}
+
+homehero {
+    height: 300px;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    margin-left: 190px;
+}
+
+yurthero {
+    height: 300px;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    margin-left: 190px;
+}
+
+trailhero {
+    height: 300px;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    margin-left: 190px;
 }
